exports[`Footer should exist 1`] = `
<footer
  style={null}>
  <p>
    ©2016 Jake Dawkins. Based off theme by 
    <a
      href="https://willianjusten.com.br">
      Willian Justen
    </a>
  </p>
</footer>
`;

exports[`Footer should render props correctly 1`] = `
<footer
  style={
    Object {
      "marginTop": 0
    }
  }>
  <p>
    ©2016 Jake Dawkins. Based off theme by 
    <a
      href="https://willianjusten.com.br">
      Willian Justen
    </a>
  </p>
</footer>
`;
